Fixed negative Resistance in doc and added a sim file for risetime

--- a/RohdeAndSchwarzWhitePaper/Draft_White_Paper.tex
+++ b/RohdeAndSchwarzWhitePaper/Draft_White_Paper.tex
@@ -1012,7 +1012,7 @@ capacitance of the varactor.
 
 Figure \ref{fig:probedNoResistance} shows the expected rise time improvement for
 a circuit like ours with 240 ladders sections in an ideal environment. Once we
-account for the series resistance, $Rser = -0.7\Omega$ for the purposes of
+account for the series resistance, $R_{ser} = 0.7\Omega$ for the purposes of
 figure \ref{fig:probedWithResistance}. We see in this case the loss is great
 enough to overcome the linearity of the line and we see a rise time increase
 instead. 
